--- a/libuthread/Makefile
+++ b/libuthread/Makefile
@@ -15,13 +15,6 @@ $(lib): $(objs)
 private.o: private.h
 	$(CC) $(CFLAGS) -c -o $@ $<
 
-# Dependencies
-queue.o: queue.c queue.h
-uthread.o: uthread.c uthread.h context.h queue.h private.h preempt.h sem.h
-context.o: context.c context.h
-private.o: private.c private.h
-sem.o: sem.c sem.h queue.h private.h uthread.h
-preempt.o: preempt.c preempt.h uthread.h context.h queue.h private.h sem.h
 
 clean:
-	rm -f $(lib) $(objs)
+	rm -f *~ $(lib) $(objs)
